codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_combined
---
▸ Terminal: just fix · 2 interactions · running 0s · Ctrl+T details
