codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
▸ Terminal: cargo test -p codex-core · 1 interaction · running 0s · Ctrl+T
  details

● Final response.
