codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_without_resets.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
────────────────────────────────────────────────────────────────────────────────

  Usage
  View account usage or redeem an earned reset.

› 1. Show usage                View recent account token usage.
     Redeem usage limit reset  No usage limit resets available.

  Press enter to confirm or esc to go back
